--- a/sir ghouse/index.html
+++ b/sir ghouse/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <label for="data-select">Select Data:</label>
+    <select id="data-select">
+
+        <option value="Karachi" id="Kar" >Karachi</option>
+        <option value="Lahore" id="lah">Lahore</option>
+      </select>
+    <button id="add-data-btn">Add Data</button>
+    
+
+
+
     <script src="app.js"></script>
+    
 </body>
 </html>
