--- a/sir ghouse/index.html
+++ b/sir ghouse/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="data-select">Select Data:</label>
+    <!-- <label for="data-select">Select Data:</label>
     <select id="data-select">
 
         <option value="Karachi" id="Kar" >Karachi</option>
         <option value="Lahore" id="lah">Lahore</option>
       </select>
-    <button id="add-data-btn">Add Data</button>
+    <button id="add-data-btn">Add Data</button> -->
     
 
 
